GNOME Bugzilla – Bug 701788
Don't try to load links for file types that don't implement EvDocumentLinks
Last modified: 2013-06-07 14:26:49 UTC
PS is an example (see attachment) of a file type that does not implement EvDocumentLinks. Try opening the Contents/Bookmarks dialog from the navigation bar when previewing a PS file. It will crash after a while when trying to load the links (if any) in the document.
My PS is too big to be attached. So here it is: http://rishi.fedorapeople.org/crash.ps
You should try to open the dialog after you have bookmarked a page on the document. Sorry for the confusion.
Created attachment 246246 [details] [review] places-bookmarks: Don't load links if EvDocumentLinks is unimplemented
Review of attachment 246246 [details] [review]: Looks good, thanks.
Comment on attachment 246246 [details] [review] places-bookmarks: Don't load links if EvDocumentLinks is unimplemented Thanks for the review.