places-bookmarks: Don't load links if EvDocumentLinks is unimplemented

https://bugzilla.gnome.org/show_bug.cgi?id=701788